--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  min-width: 1200px;
+}
+
 .router-link-exact-active {
   @apply text-cyan-600;
 }
